cmake_minimum_required(VERSION 3.20)
project(Debugger)

set(CMAKE_CXX_STANDARD 11)

add_executable(Debugger main.cpp)
add_library(lexical lexical.h lexical.cpp)
add_library(grammar grammar.h grammar.cpp)
add_library(astree astree.h astree.cpp)
add_library(SymTable SymTable.h SymTable.cpp)
add_library(MipsGeneratorClass MipsGenerator.h MipsGenerator.cpp)
add_library(registerManager registerManager.h registerManager.cpp)
add_library(errors error.h error.cpp)
target_link_libraries(Debugger lexical)
target_link_libraries(Debugger grammar)
target_link_libraries(Debugger astree)
target_link_libraries(Debugger SymTable)
target_link_libraries(Debugger MipsGeneratorClass)
target_link_libraries(Debugger registerManager)
target_link_libraries(Debugger errors)